# caelus

./: .gitignore  .vale.ini  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MCP_SPEC.md  PATCHES.md  README.md  ROADMAP.md  llms.txt  package-lock.json  package.json
python/: README.md  export_compiler_golden.py  export_derived_golden.py  export_dignity_golden.py  export_electional_golden.py  export_firdaria_golden.py  export_golden.py  export_lots_golden.py  export_parans_golden.py  export_patterns_golden.py  export_query_golden.py  export_rajayoga_golden.py  export_signature_golden.py  export_spherical_golden.py  export_turbo_golden.py  export_vargas_golden.py  export_vedic_golden.py  export_yogini_golden.py  fit_chiron.py  fit_moon.py  fit_pluto.py  fit_smallbody.py  fit_turbo.py  horizons.py  horizons_apparent_cache.json  jyotish-reference.json  pyproject.toml  requirements.txt  test_compiler.py  test_derived.py  test_electional.py  test_spherical.py  test_turbo.py  validate_horizons.py  validate_jyotish.py  validate_swiss.py
python/astroengine/: __init__.py  astrocartography.py  chart.py  chebyshev.py  compiler.py  core.py  derived.py  dignity_score.py  eclipses.py  electional.py  events.py  firdaria.py  houses.py  lots.py  parans.py  patterns.py  rajayoga.py  signature.py  spherical.py  stars.py  turbo.py  vargas.py  vedic.py  yogini.py
python/astroengine/data/: ceres_cheb.json  chiron_cheb.json  juno_cheb.json  moon_cheb.embedded.json  moon_cheb.full.json  moon_meeus47.json  pallas_cheb.json  vsop87d_earth.high.json  vsop87d_jupiter.full.json  vsop87d_jupiter.high.json  vsop87d_mars.embedded.json  (+13 more)
(+167 files in other folders)
